--- a/ClinicaVeterinaria/nbproject/project.properties
+++ b/ClinicaVeterinaria/nbproject/project.properties
@@ -41,7 +41,9 @@ javac.classpath=\
     ${libs.jsf20.classpath}:\
     ${libs.primefaces.classpath}:\
     ${libs.hibernate4-support.classpath}:\
-    ${libs.jpa2-persistence.classpath}
+    ${libs.jpa2-persistence.classpath}:\
+    ${libs.hibernate4-persistencemodelgen.classpath}:\
+    ${libs.hibernate4-persistence.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -68,7 +70,6 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
-no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 resource.dir=setup
