--- a/ClinicaVeterinaria/nbproject/project.properties
+++ b/ClinicaVeterinaria/nbproject/project.properties
@@ -29,6 +29,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.postgresql-9.4.1212.jre7.jar=..\\..\\..\\Instaladores\\informatica-programacion\\Librerias para Netbeans\\postgresql-9.4.1212.jre7.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -43,7 +44,8 @@ javac.classpath=\
     ${libs.hibernate4-support.classpath}:\
     ${libs.jpa2-persistence.classpath}:\
     ${libs.hibernate4-persistencemodelgen.classpath}:\
-    ${libs.hibernate4-persistence.classpath}
+    ${libs.hibernate4-persistence.classpath}:\
+    ${file.reference.postgresql-9.4.1212.jre7.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
